# rasa-addons

./: .gitignore  README.md  pyproject.toml
bot/fr/: config.yml  domain.yml
bot/fr/data/: nlu.yml
bot/master/: config.yml  credentials.yml  domain.yml  endpoints.yml
bot/master/actions/: actions.py
bot/master/data/: rules.yml
bot/master/log/: rasa.log.1  rasa.log.10  rasa.log.2  rasa.log.3  rasa.log.4  rasa.log.5  rasa.log.6  rasa.log.7  rasa.log.8  rasa.log.9
rasa_addons/: actions.py  brokers.py  components.py  connectors.py
rasa_addons/examples/: config.yml  credentials.yml
